# quant-tools

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: SCAN_DISCREPANCIES_2026-06-11.md  STRATEGY_RESEARCH.md
ops/hermes/: cron_executable_scan.py  cron_intraday_sentinel.py  cron_morning_workflow.py
scripts/: action_plan.py  adaptive_sizing.py  alerts.py  broker_reconciliation.py  cache_utils.py  candidate_scoring.py  common.py  correlation_risk.py  daily_brief.py  daily_workflow.py  dashboard.py  data_reliability.py  drift_monitor.py  earnings_backtest.py  earnings_backtest_v2.py  earnings_iv_scanner.py  execution_analytics.py  execution_attribution.py  execution_tickets.py  feedback_calibration.py  health_check.py  hermes_ops.py  historical_analytics.py  intraday_sentinel.py  iv_rank.py  macro_overlay.py  mark_to_market.py  model_scorecard.py  monte_carlo.py  operator_summary.py  options_screener.py  performance_profiles.py  portfolio_allocator.py  portfolio_risk.py  position_management.py  position_tracker.py  pretrade_check.py  public_fill_ingestion.py  quant.py  scan_optimizer.py  (+9 more)
tests/: test_cli_forwarding.py  test_core_workflow.py  test_hermes_ops.py  test_state_safety_and_marks.py
